--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcsh 'Courts -- Ontario -- Middlesex County'
 - !lcsh 'Courthouses -- Ontario -- Toronto'
 - !lcsh 'Elgin (Ont. : County) -- History'
+- GITenberg
 title: "The Court Houses of a Century\r\nA Brief Historical Sketch of the Court Houses\
   \ of London Distict, the County of Middlesex, and County of Elgin"
 url: http://www.gutenberg.org/ebooks/35026
